<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Reading Journal</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="desc">Description</string>
    <string name="rating">Rating</string>
    <string name="note">Note</string>
    <string name="page">Page</string>
    <string name="latest_note">Latest Note</string>
    <string name="add_note">Add Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="delete_note">Delete Note</string>
    <string name="empty_title">You have no book yet</string>
    <string name="empty_subtitle">Get started by adding a book</string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_add">Add</string>
    <string name="action_delete">Delete</string>
    <string name="action_discard">Discard</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="edit_book_img">Edit Book Image</string>
    <string name="show_book_img">Show Book Image</string>
    <string name="status">Finished</string>
    <string name="write_something">Write something&#8230;</string>
    <string name="quick_note">Quick Note</string>
    <string name="show_detail">Details</string>
    <string name="date">Date</string>

    <string name="science_fiction">Science fiction</string>
    <string name="satire">Satire</string>
    <string name="drama">Drama</string>
    <string name="action_adventure">Action and Adventure</string>
    <string name="romance">Romance</string>
    <string name="mystery">Mystery</string>
    <string name="horror">Horror</string>
    <string name="self_help">Self help</string>
    <string name="health">Health</string>
    <string name="guide">Guide</string>
    <string name="travel">Travel</string>
    <string name="children">Children</string>
    <string name="religion">Religion</string>
    <string name="science">Science</string>
    <string name="history">History</string>
    <string name="math">Math</string>
    <string name="anthology">Anthology</string>
    <string name="poetry">Poetry</string>
    <string name="encyclopedias">Encyclopedias</string>
    <string name="dictionaries">Dictionaries</string>
    <string name="comics">Comics</string>
    <string name="art">Art</string>
    <string name="cookbooks">Cookbooks</string>
    <string name="diaries">Diaries</string>
    <string name="journals">Journals</string>
    <string name="prayer">Prayer books</string>
    <string name="series">Series</string>
    <string name="trilogy">Trilogy</string>
    <string name="biographies">Biographies</string>
    <string name="autobiographies">Autobiographies</string>
    <string name="fantasy">Fantasy</string>

    <string name="category_name">Category Name</string>
    <string name="title_activity_catergory">CategoryActivity</string>
</resources>
