<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/basic_padding_medium"
            android:paddingLeft="@dimen/basic_padding_small"
            android:paddingRight="@dimen/basic_padding_small"
            android:paddingTop="@dimen/basic_padding_small">

            <TextView
                android:id="@+id/note_item_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="@dimen/basic_text_size_small"/>

            <TextView
                android:id="@+id/note_item_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/basic_padding_small"
                android:layout_marginStart="@dimen/basic_padding_small"
                android:layout_toEndOf="@id/note_item_date"
                android:layout_toRightOf="@id/note_item_date"
                android:text="@string/page"
                android:textSize="@dimen/basic_text_size_small"/>

            <TextView
                android:id="@+id/note_item_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/note_item_date"
                android:text="@string/note"
                android:textSize="@dimen/basic_text_size_small"/>

            <android.support.v7.widget.ButtonBarLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/note_item_detail">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/action_edit"
                    android:textColor="@color/colorAccent"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/action_delete"
                    android:textColor="@color/colorAccent"/>
            </android.support.v7.widget.ButtonBarLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>