<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="24dp"
    android:minWidth="@dimen/dialog_min_width"
    android:padding="@dimen/basic_padding_medium">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/add_note_dialog_note_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/basic_padding_small"
        android:hint="@string/note">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/add_note_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="2"
            android:gravity="top"
            android:inputType="textCapWords|textMultiLine" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/add_note_dialog_page_box"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/basic_padding_small"
        android:layout_below="@id/add_note_dialog_note_box"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/page">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/add_page_field"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLength="4"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.ButtonBarLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/add_note_dialog_page_box">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/add_note_dialog_discard_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/action_discard"
            android:textColor="@color/colorAccent" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/add_note_dialog_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/action_save"
            android:textColor="@color/colorAccent" />
    </android.support.v7.widget.ButtonBarLayout>
</RelativeLayout>