<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/basic_padding_small"
        android:layout_marginLeft="@dimen/basic_padding_small"
        android:layout_marginTop="@dimen/basic_padding_small"
        android:text="@string/title"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:id="@+id/edit_book_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/basic_padding_small"
        android:layout_marginLeft="@dimen/basic_padding_small"
        android:layout_marginTop="@dimen/basic_padding_small"
        android:inputType="textCapWords" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/basic_padding_small"
        android:layout_marginLeft="@dimen/basic_padding_small"
        android:layout_marginTop="@dimen/basic_padding_small"
        android:text="@string/author"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:id="@+id/edit_book_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/basic_padding_small"
        android:layout_marginLeft="@dimen/basic_padding_small"
        android:layout_marginTop="@dimen/basic_padding_small"
        android:inputType="textCapWords" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/basic_padding_small"
        android:layout_marginLeft="@dimen/basic_padding_small"
        android:layout_marginTop="@dimen/basic_padding_small"
        android:text="@string/desc"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:id="@+id/edit_book_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/basic_padding_small"
        android:layout_marginLeft="@dimen/basic_padding_small"
        android:layout_marginTop="@dimen/basic_padding_small"
        android:gravity="top"
        android:imeOptions="actionDone"
        android:inputType="textMultiLine"
        android:minLines="10" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/basic_padding_small"
        android:layout_marginLeft="@dimen/basic_padding_small"
        android:layout_marginTop="@dimen/basic_padding_small"
        android:text="@string/rating"
        android:textColor="@color/colorPrimary" />

    <RatingBar
        android:id="@+id/edit_rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/basic_padding_small"
        android:layout_marginLeft="@dimen/basic_padding_small"
        android:layout_marginTop="@dimen/basic_padding_small"
        android:numStars="5" />
</LinearLayout>