<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/show_book_image"
        android:layout_width="200dp"
        android:layout_height="267dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/basic_padding_small"
        android:layout_marginLeft="@dimen/basic_padding_small"
        android:layout_marginTop="@dimen/basic_padding_small"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/book_default" />

    <TextView
        android:id="@+id/show_book_title"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:gravity="center_horizontal"
        android:maxWidth="130dp"
        android:text="@string/title"
        android:textColor="@android:color/white"
        android:textSize="@dimen/basic_text_size_large" />

    <TextView
        android:id="@+id/show_book_author"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:gravity="center_horizontal"
        android:maxLines="2"
        android:maxWidth="100dp"
        android:text="@string/author"
        android:textColor="@android:color/white"
        android:textSize="@dimen/basic_text_size_medium" />

    <View
        android:id="@+id/diviner_1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/show_book_image"
        android:layout_marginBottom="@dimen/basic_padding_small"
        android:layout_marginLeft="@dimen/basic_padding_medium"
        android:layout_marginRight="@dimen/basic_padding_medium"
        android:layout_marginTop="@dimen/basic_padding_medium"
        android:background="?android:attr/listDivider" />

    <Button
        android:id="@+id/asb_bone1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/diviner_1"
        android:background="@android:color/transparent"
        android:gravity="left"
        android:paddingStart="@dimen/basic_padding_medium"
        android:paddingEnd="@dimen/basic_padding_medium"
        android:paddingLeft="@dimen/basic_padding_medium"
        android:text="@string/desc"
        android:textColor="@android:color/black"
        android:textSize="@dimen/basic_text_size_medium" />

    <TextView
        android:id="@+id/show_book_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/asb_bone1"
        android:layout_marginStart="@dimen/basic_padding_medium"
        android:layout_marginLeft="@dimen/basic_padding_medium"
        android:gravity="center"
        android:textSize="@dimen/basic_text_size_medium" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/basic_padding_small"
        android:layout_marginLeft="@dimen/basic_padding_small"
        android:layout_marginTop="@dimen/basic_padding_small"
        android:text="@string/rating"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/basic_text_size_medium"
        android:visibility="invisible" />

    <RatingBar
        android:id="@+id/show_rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/basic_padding_small"
        android:layout_marginLeft="@dimen/basic_padding_small"
        android:numStars="5"
        android:textSize="@dimen/basic_text_size_medium"
        android:visibility="invisible" />

    <View
        android:id="@+id/diviner_2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/show_book_description"
        android:layout_marginBottom="@dimen/basic_padding_small"
        android:layout_marginLeft="@dimen/basic_padding_medium"
        android:layout_marginRight="@dimen/basic_padding_medium"
        android:layout_marginTop="@dimen/basic_padding_medium"
        android:background="?android:attr/listDivider" />

    <Button
        android:id="@+id/asb_bone2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/diviner_2"
        android:background="@android:color/transparent"
        android:gravity="left"
        android:paddingStart="@dimen/basic_padding_medium"
        android:paddingEnd="@dimen/basic_padding_medium"
        android:paddingLeft="@dimen/basic_padding_medium"
        android:text="@string/addcomment"
        android:textColor="@android:color/black"
        android:textSize="@dimen/basic_text_size_medium" />

    <EditText
        android:id="@+id/bd_add_comment_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/asb_bone2"
        android:layout_marginLeft="@dimen/basic_padding_medium"
        android:layout_marginRight="@dimen/basic_padding_medium"
        android:background="@drawable/edit_box"
        android:gravity="top"
        android:minLines="2"
        android:padding="@dimen/basic_padding_small" />

    <LinearLayout
        android:id="@+id/bd_page_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bd_add_comment_field"
        android:layout_marginBottom="@dimen/basic_padding_medium"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="left"
            android:paddingStart="@dimen/basic_padding_medium"
            android:paddingEnd="@dimen/basic_padding_medium"
            android:paddingLeft="@dimen/basic_padding_medium"
            android:paddingTop="@dimen/basic_padding_medium"
            android:text="@string/page"
            android:textColor="@android:color/black"
            android:textSize="@dimen/basic_text_size_medium" />

        <EditText
            android:id="@+id/bd_page_edit_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:minWidth="@dimen/page_edit_text_min_width" />
    </LinearLayout>

    <Button
        android:id="@+id/bd_save_comment_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/bd_add_comment_field"
        android:layout_marginEnd="@dimen/basic_padding_medium"
        android:layout_marginRight="@dimen/basic_padding_medium"
        android:layout_marginTop="@dimen/basic_padding_small"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/action_save"
        android:textColor="@android:color/white"
        android:textSize="@dimen/basic_text_size_medium" />
</RelativeLayout>